// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDidStart should render full DID with credentials 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <div
      class="infoWrapper"
    >
      <p
        class="info"
      >
        To proceed you need a DID.
      </p>
      <p
        class="info"
      >
        Choose whether to attach your credentials to the signature, or sign without credentials.
      </p>
    </div>
    <a
      aria-disabled="false"
      class="next"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did/sign/credentials"
    >
      Sign with credentials
    </a>
    <a
      aria-disabled="false"
      class="next"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did/sign/password"
    >
      Sign without credentials
    </a>
  </section>
</div>
`;

exports[`SignDidStart should render full DID with no credentials 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <div
      class="infoWrapper"
    >
      <p
        class="info"
      >
        To proceed you need a DID.
      </p>
      <p
        class="info"
      >
        Choose whether to attach your credentials to the signature, or sign without credentials.
      </p>
    </div>
    <a
      aria-disabled="true"
      aria-label="This identity has no attested credentials"
      class="next"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did/sign/credentials"
      title="This identity has no attested credentials"
    >
      Sign with credentials
    </a>
    <a
      aria-disabled="false"
      class="next"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did/sign/password"
    >
      Sign without credentials
    </a>
  </section>
</div>
`;

exports[`SignDidStart should render light DID 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsInBsYWludGV4dCI6IkFsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91c0FsbHlvdXJiYXNlYXJlYmVsb25ndG91cyJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <div
      class="infoWrapper"
    >
      <p
        class="info"
      >
        To proceed you need a DID.
      </p>
      <p
        class="info"
      >
        Choose whether to attach your credentials to the signature, or sign without credentials.
      </p>
    </div>
    <a
      aria-disabled="true"
      aria-label="You need a DID first"
      class="next"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/sign/credentials"
      title="You need a DID first"
    >
      Sign with credentials
    </a>
    <a
      aria-disabled="true"
      aria-label="You need a DID first"
      class="next"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/sign/password"
      title="You need a DID first"
    >
      Sign without credentials
    </a>
  </section>
</div>
`;
